--- a/css/style.css
+++ b/css/style.css
@@ -53,3 +53,15 @@
         margin-right: 1rem;
     }
 }
+.background-img {
+            background-image: url("../images/image.png"); 
+            
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            width: 100%;
+            height: 700px;
+       
+            min-height: 200px;
+            position: relative;
+}
